<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/android_horizontal_margin"
    android:paddingTop="@dimen/android_vertical_margin"
    android:paddingEnd="@dimen/android_horizontal_margin"
    tools:context=".Menu">

    <Button
        android:id="@+id/jumlah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/android_vertical_margin"
        android:text="@string/penjumlahan" />

    <Button
        android:id="@+id/kurang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/android_vertical_margin"
        android:text="@string/pengurangan" />

    <Button
        android:id="@+id/kali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/android_vertical_margin"
        android:text="@string/perkalian" />

    <Button
        android:id="@+id/bagi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/android_vertical_margin"
        android:text="@string/pembagian" />


</LinearLayout>